updated Galician and Lithuanian translation

--- a/po/wesnoth-did/lt.po
+++ b/po/wesnoth-did/lt.po
@@ -1937,7 +1937,7 @@ msgstr ""
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:18
 msgid "<i>“To become a lich, one must first die.”</i>"
-msgstr "<i>„Norint tapti liču, pirmiausia reikia mirti.“<i>/"
+msgstr "<i>„Norint tapti liču, pirmiausia reikia mirti.“</i>"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:23
