--- a/po/wesnoth-low/lt.po
+++ b/po/wesnoth-low/lt.po
@@ -1657,7 +1657,7 @@ msgstr "Nors ir elfas, mąstai visai kaip dvarfas! Tu man patinki!"
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/06_Acquaintance_in_Need.cfg:296
 msgid "whisper^—For an elf..."
-msgstr "pašnibždom^—Kaip elfas..."
+msgstr "—Nors ir elfas..."
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/06_Acquaintance_in_Need.cfg:306
