--- a/po/wesnoth-nr/lt.po
+++ b/po/wesnoth-nr/lt.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2010-01-01 00:00+0300\n"
+"PO-Revision-Date: 2011-12-15 21:41+0300\n"
 "Last-Translator: Andrius Štikonas <stikonas@gmail.com>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "Language: Lithuanian\n"
@@ -800,7 +800,7 @@ msgstr "Ėėė... gerai..."
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:312
 msgid "whisper^Is it safe to have this lunatic with us?"
-msgstr "pašnibždom^O mums saugu vestis su savimi šitą kvanką?"
+msgstr "O mums saugu vestis su savimi šitą kvanką?"
 
 #. [message]: speaker=Camerin
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:328
@@ -1765,7 +1765,7 @@ msgstr "Hetelis"
 #. [side]: type=Death Knight, id=Tervor
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:103
 msgid "Tervor"
-msgstr ""
+msgstr "Tervoras"
 
 #. [side]: type=Death Knight, id=Author
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:127
@@ -2503,7 +2503,7 @@ msgstr ""
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1625
 msgid "What do you have there, Abhai?"
-msgstr ""
+msgstr "Ką ten turi, Abhajau?"
 
 #. [message]: speaker=Abhai
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:1629
@@ -2767,7 +2767,7 @@ msgstr ""
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2112
 #: data/campaigns/Northern_Rebirth/scenarios/08b_Ray_of_Hope.cfg:406
 msgid "Abhai"
-msgstr ""
+msgstr "Abhajus"
 
 #. [message]: speaker=Abhai
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2117
@@ -3020,13 +3020,13 @@ msgstr ""
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2430
 msgid "Nope. Should I open it?"
-msgstr ""
+msgstr "Ne. Ar turėčiau atidaryti?"
 
 #. [option]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2432
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2539
 msgid "Go for it!"
-msgstr ""
+msgstr "Pabandyk!"
 
 #. [message]: speaker=unit
 #. [message]: speaker=Sister Thera
@@ -3035,14 +3035,14 @@ msgstr ""
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2586
 #: data/campaigns/Northern_Rebirth/utils/herodeaths.cfg:691
 msgid "There we go."
-msgstr ""
+msgstr "Na, štai."
 
 #. [option]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2454
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2505
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2591
 msgid "Just wait a sec."
-msgstr ""
+msgstr "Palauk sekundėlę."
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2482
@@ -3404,7 +3404,7 @@ msgstr "Franikas"
 #. [side]: type=Troll, id=Henie
 #: data/campaigns/Northern_Rebirth/scenarios/05b_Compelled.cfg:66
 msgid "Henie"
-msgstr ""
+msgstr "Henis"
 
 #. [objective]: condition=win
 #: data/campaigns/Northern_Rebirth/scenarios/05b_Compelled.cfg:84
@@ -4300,7 +4300,7 @@ msgstr ""
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:143
 msgid "(<i>Giggle</i>) Something like that."
-msgstr ""
+msgstr "(<i>Krizena</i>) Kažkas tokio."
 
 #. [message]: speaker=Tallin
 #. [part]
@@ -4486,7 +4486,7 @@ msgstr ""
 #. [message]: id=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:437
 msgid "whisper^Oh...!"
-msgstr ""
+msgstr "O...!"
 
 #. [message]: id=Father Morvin
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:443
@@ -4803,7 +4803,7 @@ msgstr ""
 #: data/campaigns/Northern_Rebirth/scenarios/11a_The_Eastern_Flank.cfg:450
 #: data/campaigns/Northern_Rebirth/scenarios/13a_Showdown.cfg:838
 msgid "(<i>Snicker</i>)"
-msgstr ""
+msgstr "(<i>Žvengia</i>)"
 
 #. [message]: id=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:801
@@ -5548,12 +5548,12 @@ msgstr ""
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/08b_Ray_of_Hope.cfg:84
 msgid "Abhai: You must find the Rod of Justice."
-msgstr ""
+msgstr "Abhajus: Privalai rasti Teisingumo lazdą."
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/08b_Ray_of_Hope.cfg:89
 msgid "The Rod of Justice? I have never heard of it."
-msgstr ""
+msgstr "Teisingumo lazdą? Niekad negirdėjau apie ją."
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/08b_Ray_of_Hope.cfg:94
@@ -5663,12 +5663,12 @@ msgstr "Kišmišas"
 #. [objective]: condition=win
 #: data/campaigns/Northern_Rebirth/scenarios/08b_Ray_of_Hope.cfg:329
 msgid "Find the Rod of Justice"
-msgstr ""
+msgstr "Raskite Teisingumo lazdą"
 
 #. [objective]: condition=lose
 #: data/campaigns/Northern_Rebirth/scenarios/08b_Ray_of_Hope.cfg:337
 msgid "Death of Abhai"
-msgstr ""
+msgstr "Abhajaus mirtis"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/08b_Ray_of_Hope.cfg:530
@@ -5763,12 +5763,12 @@ msgstr ""
 #. [unit]: type=Dwarvish Lord, id=Haffel
 #: data/campaigns/Northern_Rebirth/scenarios/08b_Ray_of_Hope.cfg:746
 msgid "Haffel"
-msgstr ""
+msgstr "Hafelis"
 
 #. [unit]: type=Dwarvish Dragonguard, id=Hekkna
 #: data/campaigns/Northern_Rebirth/scenarios/08b_Ray_of_Hope.cfg:755
 msgid "Hekkna"
-msgstr ""
+msgstr "Heknas"
 
 #. [message]: speaker=Haffel
 #: data/campaigns/Northern_Rebirth/scenarios/08b_Ray_of_Hope.cfg:823
@@ -6058,7 +6058,7 @@ msgstr ""
 #. [message]: speaker=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:130
 msgid "You mean Malifor?"
-msgstr ""
+msgstr "Turi omeny Maloforą?"
 
 #. [message]: speaker=Elenia
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:134
@@ -6351,7 +6351,7 @@ msgstr ""
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:378
 msgid "Hey look, it’s a troll!"
-msgstr ""
+msgstr "Ei, žiūrėkit, tai trolis!"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:382
@@ -6994,12 +6994,12 @@ msgstr ""
 #. [unit]: type=Drake Burner, id=Singe
 #: data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg:692
 msgid "Singe"
-msgstr ""
+msgstr "Singas"
 
 #. [unit]: type=Drake Fighter, id=Bak'man
 #: data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg:710
 msgid "Bak’man"
-msgstr ""
+msgstr "Bak’manas"
 
 #. [message]: speaker=Sister Thera
 #: data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg:723
@@ -7401,7 +7401,7 @@ msgstr "Rašas"
 #. [side]: type=Orcish Warlord, id=Al'Mar
 #: data/campaigns/Northern_Rebirth/scenarios/11a_The_Eastern_Flank.cfg:90
 msgid "Al’Mar"
-msgstr ""
+msgstr "Al’Maras"
 
 #. [side]: type=Orcish Warlord, id=Ha'Tang
 #: data/campaigns/Northern_Rebirth/scenarios/11a_The_Eastern_Flank.cfg:104
@@ -8561,7 +8561,7 @@ msgstr ""
 #. [message]: id=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/14a_Epilogue.cfg:300
 msgid "Thanks, friend."
-msgstr ""
+msgstr "Ačiū, drauge."
 
 #. [message]: id=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/14a_Epilogue.cfg:312
