--- a/po/wesnoth-tutorial/lt.po
+++ b/po/wesnoth-tutorial/lt.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2010-01-01 00:00+0300\n"
+"PO-Revision-Date: 2011-12-15 11:54+0300\n"
 "Last-Translator: Andrius Štikonas <stikonas@gmail.com>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "Language: Lithuanian\n"
@@ -306,30 +306,20 @@ msgstr "Karūnos"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:458
-#, fuzzy
-#| msgid ""
-#| "Note: The tiny metal crown above Delfador means you will lose the game if "
-#| "he is killed. You will also lose the game if your leader (Konrad) is "
-#| "killed."
 msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Konrad) is killed."
 msgstr ""
-"Dėmesio: maža metalinė karūnėlė virš Delfadoro reiškia, kad jeigu jis žus, "
+"Maža metalinė karūnėlė virš Delfadoro reiškia, kad jeigu jis žus, "
 "pralaimėsite. Taip pat pralaimėsite, jeigu žus jūsų vadas (Konradas)."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:462
-#, fuzzy
-#| msgid ""
-#| "Note: The tiny metal crown above Delfador means you will lose the game if "
-#| "he is killed. You will also lose the game if your leader (Li’sar) is "
-#| "killed."
 msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Li’sar) is killed."
 msgstr ""
-"Dėmesio: maža metalinė karūnėlė virš Delfadoro reiškia, kad jeigu jis žus, "
+"Maža metalinė karūnėlė virš Delfadoro reiškia, kad jeigu jis žus, "
 "pralaimėsite. Taip pat pralaimėsite, jeigu žus jūsų vadė (Li’sar)."
 
 #. [message]: id=Delfador
@@ -870,9 +860,9 @@ msgid ""
 "‘Strong’ means a unit does more damage, and ‘intelligent’ means it needs "
 "less experience to advance a level."
 msgstr ""
-", tavo naujasis dalinys turi du bruožus: <i>stiprus</i> ir </i>protingas</"
-"i>. „Stiprus“ reiškia, kad jis daro daugiau žalos, o „protingas“, kad jam "
-"reikia mažiau patirties iki kito lygio."
+", tavo naujasis dalinys turi du bruožus: <i>stiprus</i> ir <i>protingas</i>. "
+"„Stiprus“ reiškia, kad jis daro daugiau žalos, o „protingas“, kad jam reikia "
+"mažiau patirties iki kito lygio."
 
 #. [then]
 #. This string used as follows: "<unit name>' has two traits: <i>quick</i> and ...'"
