--- a/po/wesnoth-utbs/lt.po
+++ b/po/wesnoth-utbs/lt.po
@@ -6157,7 +6157,7 @@ msgstr ""
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg:1705
 msgid "There must be another way out. There must!"
-msgstr "Turi būti kitas išėjas. Turi būt!"
+msgstr "Turi būti kitas išėjimas. Turi būt!"
 
 #. [message]: speaker=$ally_name
 #: data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg:1710
@@ -12114,7 +12114,7 @@ msgstr ""
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/13_Epilogue.cfg:572
 msgid "Actually I just finished."
-msgstr "Tiesa sakant, tik ką pabaigiau."
+msgstr "Tiesą sakant, tik ką pabaigiau."
 
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/13_Epilogue.cfg:577
