Updated the British English translation.

--- a/po/wesnoth-lib/en_GB.po
+++ b/po/wesnoth-lib/en_GB.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2011-12-01 19:54-0500\n"
+"PO-Revision-Date: 2011-12-16 05:51-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -1327,22 +1327,20 @@ msgstr "Select difficulty level:"
 
 #. [label]
 #: data/gui/default/window/chat_log.cfg:38
-#, fuzzy
 #| msgid "View Chat Log"
 msgid "Chat Log"
-msgstr "View Chat Log"
+msgstr "Chat Log"
 
 #. [label]
 #: data/gui/default/window/chat_log.cfg:56
-#, fuzzy
 #| msgid "Message:"
 msgid "Page:"
-msgstr "Message:"
+msgstr "Page:"
 
 #. [slider]: id=page_number
 #: data/gui/default/window/chat_log.cfg:69
 msgid "Last"
-msgstr ""
+msgstr "Last"
 
 #. [button]: id=previous_page
 #. [button]: id=previous_tip
