--- a/po/wesnoth-tutorial/en_GB.po
+++ b/po/wesnoth-tutorial/en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2011-12-11 17:33-0500\n"
+"PO-Revision-Date: 2011-12-16 05:49-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -307,7 +307,6 @@ msgstr "Crowns"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:458
-#, fuzzy
 #| msgid ""
 #| "Note: The tiny metal crown above Delfador means you will lose the game if "
 #| "he is killed. You will also lose the game if your leader (Konrad) is "
@@ -316,12 +315,11 @@ msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Konrad) is killed."
 msgstr ""
-"Note: The tiny metal crown above Delfador means you will lose the game if he "
-"is killed. You will also lose the game if your leader (Konrad) is killed."
+"The tiny metal crown above Delfador means you will lose the game if he is "
+"killed. You will also lose the game if your leader (Konrad) is killed."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:462
-#, fuzzy
 #| msgid ""
 #| "Note: The tiny metal crown above Delfador means you will lose the game if "
 #| "he is killed. You will also lose the game if your leader (Li’sar) is "
@@ -330,8 +328,8 @@ msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Li’sar) is killed."
 msgstr ""
-"Note: The tiny metal crown above Delfador means you will lose the game if he "
-"is killed. You will also lose the game if your leader (Li’sar) is killed."
+"The tiny metal crown above Delfador means you will lose the game if he is "
+"killed. You will also lose the game if your leader (Li’sar) is killed."
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:474
